# cas_robotics

./: GetImpLevInfo.m  NBV.m  NBV_beta.m  SerialCom.cpp  Testcase5_data_nbv_beta.mat  WheelEncoder.cpp  WheelchairDriver.cpp  allOff.m  basic_scan_data.mat  calunknownweight.m  check_path_for_col.m  codepicture.vsd  demopath.m  densoobj.mat  dist_pt2tr.m  doscan.m  exGUI.fig  generatePomdpModel_v2.m  generatePomdpModel_v4b.m  getweighted_addinfo.m  loadSolution.m  movetonewQ.m  myhandler.m  organise_data.m  pathplanner.m  processBelief.m  rotateFigure.m  setupoptimisation.m  setupscanner.m  setupworkspace.m  surface_making_simple.m  tasks_list  test.cfg  threeDMedianFilt.m  use_real_robot_GETJs.m  use_real_robot_MOVE.m  workspace.mat  zmdpParser.m
CamPanTilt/: .cproject  .project  CMakeLists.txt
CamPanTilt/src/: PanTilt.cpp  PanTilt.h  dynctrl-logitech.h  test.cpp
CasPlanner/: .cdtproject  .project  CMakeLists.txt  CasPlanner.kdevelop  CasPlanner.kdevelop.pcs  CasPlanner.kdevses  CasPlanner.tag  Doxyfile  Makefile  README  auto-svn-ignore.sh  casgui.pro  casplanner.pro  configure  doxygen.Doxyfile  svn-ignore.list  ui_hritab.h  wheelchair.cfg
CasPlanner/StageSim/: .player  cas.world  casarea.cfg  hokuyo.inc  map.inc  mricp.cfg  player.cspace  sick.inc  simple.cfg  wheelchair.inc
CasPlanner/StageSim/logs/: MAP_PATCH0.pgm  patch_config.txt
CasPlanner/gui/: CommManager.cpp  CommManager.h  Controller.cpp  Controller.h  MapManager.cpp  MapManager.h  MapPainter.cpp  MapPainter.h  Navigator.cpp  Navigator.h  cfgreader.cpp  cfgreader.h  commmanager.cpp  commmanager.h  comms.h  configfile.cc  configfile.h  configparsertab.cpp  configparsertab.h  configparsertab.ui  glrender.h  hritab.cpp  hritab.h  hritab.ui  interfaceprovider.h  laserrender.cpp  laserrender.h  loggerview.cpp  loggerview.h  loggerview.ui  main.cpp  mainwindow.cpp  mainwindow.h  map.h  mapmanager.cpp  mapmanager.h  mappainter.cpp  mappainter.h  mapviewer.cpp  mapviewer.h  (+44 more)
CasPlanner/includes/: Astar.h  ForceField.h  Gui.h  LList.h  Map.h  Node.h  PathFollower.h  PathPlanner.h  Planner.cpp  Planner.h  PlannerGui.h  Point.h  Robot.h  SearchSpace.h  SearchSpaceNode.h  Vector2D.h  defs.h  nn.h  utils.h
CasPlanner/modules/CommManager/: accelerometer.cpp  accelerometer.h  commmanager.cpp  commmanager.h  comms.h  interfaceprovider.h  playerinterface.cpp  playerinterface.h
CasPlanner/modules/Controller/: common.h  wheelchairproxy.cpp  wheelchairproxy.h
CasPlanner/modules/ExceptionHandling/: casplannerexception.cpp  casplannerexception.h  exceptionhandler.cpp  exceptionhandler.h
CasPlanner/modules/GeometricTools/: Transformations.h  Vector2D.h  geometry.h  utils.h
CasPlanner/modules/HumanRobotInteraction/: IntentionRecognizer.cpp  IntentionRecognizer.h  activityLogger.cpp  activityLogger.h
CasPlanner/modules/HumanRobotInterface/: IntentionRecognizer.cpp  IntentionRecognizer.h  activityLogger.cpp  activityLogger.h
CasPlanner/modules/Logger/: logger.cpp  logger.h
CasPlanner/modules/MapManager/: map.cpp  map.h  mapmanager.cpp  mapmanager.h  mapskeleton.cpp  mapskeleton.h
CasPlanner/modules/Misc/: Timer.h  timer.cpp  timer.h
CasPlanner/modules/Navigator/: controller.cpp  controller.h  navigator.cpp  navigator.h
CasPlanner/modules/ObstacleAvoidance/: ForceField.cpp  ForceField.h  forcefield.cpp  forcefield.h
CasPlanner/modules/Parser/: settings.cpp  settings.h  xmlparser.cpp  xmlparser.h
CasPlanner/modules/PathPlanner/: PathPlanner.h  SearchSpace.h  SearchSpaceNode.h  astar.cpp  astar.h  heuristic.cpp  heuristic.h  llist.cpp  llist.h  node.cpp  node.h  pathplanner.cpp  pathplanner.h  planningmanager.cpp  planningmanager.h  robot.cpp  robot.h  searchspace.cpp  searchspace.h  searchspacenode.cpp  searchspacenode.h  socialplanner.cpp  socialplanner.h  voronoipathplanner.cpp  voronoipathplanner.h
CasPlanner/modules/PlanningManager/: planningmanager.h
CasPlanner/modules/PlayGround/: playground.cpp  playground.h  robotmanager.cpp  robotmanager.h
CasPlanner/modules/PomdpCore/: AbstractBound.h  BlindLBInitializer.cc  BlindLBInitializer.h  BoundPair.cc  BoundPair.h  BoundPairCore.cc  BoundPairCore.h  BoundPairExec.cc  BoundPairExec.h  CassandraModel.cc  CassandraModel.h  CassandraParser.cc  CassandraParser.h  IncrementalLowerBound.h  IncrementalUpperBound.h  MDPCache.cc  MDPCache.h  MDPExec.cc  MDPExec.h  MDPModel.h  MatrixUtils.h  MaxPlanesLowerBound.cc  MaxPlanesLowerBound.h  Pomdp.cc  Pomdp.h  UMLDesign.xmi  decision-tree.c  embedFiles.h  pomdp_spec.tab.cc  pomdp_spec.tab.hh  pomdp_spec.yy.cc  sla.h  slaMatrixUtils.h  sla_cassandra.h  sla_mask.h  zmdp.conf  zmdpCommonDefs.h  zmdpCommonTime.cc  zmdpCommonTime.h  zmdpCommonTypes.cc  (+4 more)
CasPlanner/modules/Rendering/: FreeType.cpp  bitmap_fonts.h  glrender.h  laserrender.cpp  laserrender.h  mapviewer.cpp  mapviewer.h  ogrender.cpp  ogrender.h  robotrender.cpp  robotrender.h  speedrender.cpp  speedrender.h
CasPlanner/modules/ScanMatching/: geometry2D.cpp  geometry2D.h  icp.cpp  icp.h
CasPlanner/modules/Sensors/: sensors.cpp  sensors.h
CasPlanner/modules/TasksManager/: hmm.cpp  str2idmap.h  tables.cpp  task.cpp  task.h  tasks.txt  tasksgui.cpp  tasksgui.h
CasPlanner/resources/: icons.qrc
CasPlanner/src/: Astar.cpp  CasPlanner.cpp  ForceField.cpp  Gui.cpp  LList.cpp  Map.cpp  Node.cpp  PathFollower.cpp  PathPlanner.cpp  Point.cpp  Robot.cpp  SearchSpace.cpp  SearchSpace.h  SearchSpaceNode.cpp  Timer.cpp  icp.cpp  test.cpp
MRICP 2.0/: makefile
VisionClassification/: CMakeLists.txt  README
VisionClassification/examples/: CMakeLists.txt  backgroundSubtraction.cpp  brightnessClassification.cpp  textOCR.cpp  trainFindObject.cpp
VisionClassification/src/: CMakeLists.txt
WheelChairDriver-3.1/: CMakeLists.txt  SerialCom.cpp  SerialCom.h  WheelEncoder.cpp  WheelEncoder.h  WheelchairDriver.cpp  common.h  laser.cfg  wheelchair.cpp  wheelchair.h
WheelChairDriver-3.1/autoControl/: SerialCom.cpp  SerialCom.h  WheelEncoder.cpp  WheelEncoder.h  autoControl.cpp  defs.h  makefile
WheelChairDriver-3.1/clientcpp/: control.cpp  wheelchairproxy.cpp
(+927 files in other folders)
